Fix list-row button overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -269,7 +269,7 @@ body:has(.modal-opened) {
     border border-border rounded-xl bg-background
   }
   .list-row {
-    @apply flex flex-row items-center p-3 gap-1 grow min-w-0 text-start
+    @apply flex flex-row items-center p-3 gap-1 grow min-w-0 text-start w-full
     hover:bg-foreground/5 rounded-lg relative
     active:bg-foreground/8
   }
